clusters/oracle-cluster/core/monitoring/grafana-ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: grafana-ingress
    namespace: monitoring
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:jgsDY9UK3IPlKPTe8RoI/Lolqu3oQONanOLf,iv:9BUowsJa38ZhpK+4JIUbyj2Ua6wg5NNMMQWq+yuNt0Y=,tag:Qgi2WPpK5zDvNhOvaqtBGg==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:1Wy1S7QYz9bIpsQNexLS4F6lBCOfXBD7Am9W,iv:LWHw8jjcOcs7v5gFo4d0ZbqSOtR20tZbuqDgix+BjOE=,tag:Sa2zNfDxpLBb3Wgf8sZ+Yw==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: monitoring-kube-prometheus-stack-grafana
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3Q0JmWXlFeGlEaXkxY3Uy
[...]
            id5yyDqYiQKZ/io71zA+j41UcW1s2rjamC/yREPY4F/tW5jBSJJM3Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-21T06:06:18Z"
    mac: ENC[AES256_GCM,data:lfgpERmUcoMtbE/c4DbnXWP5HByJjWSHCaMycM0HmSq3cNFznHc3UVKYELGeROfE00bJ4eWsjywaVEITP2QPHgqCKWcxqB25I986C7BhGfmeGCXbXa59WAz8WP41Vcu9EU3Om126R7LvOA6NMe+2zUTMMblzGPQFSIT/wMgBoT4=,iv:gdTc1mXKHIKOGEMxqBuGw+xHzElmkOuwDGhfaQGSOj4=,tag:4l7TskTJgt3nBAO/fp1gpQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
